include/tcp_sans_io.h

/*
 * tcp_sans_io.h — C header for the tcp-sans-io stack.
 *
 * Generated by hand from src/ffi.rs. ABI version is queryable at runtime via
 * `tcp_abi_version()`; bump it on any breaking change.
 */
#ifndef TCP_SANS_IO_H
#define TCP_SANS_IO_H

#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/* ---- States (matches Rust enum State, repr(u8)) ----------------------- */
#define TCP_STATE_CLOSED       0
#define TCP_STATE_SYN_SENT     1
#define TCP_STATE_ESTABLISHED  2
#define TCP_STATE_FIN_WAIT_1   3
#define TCP_STATE_FIN_WAIT_2   4
#define TCP_STATE_CLOSING      5
#define TCP_STATE_TIME_WAIT    6
#define TCP_STATE_CLOSE_WAIT   7
#define TCP_STATE_LAST_ACK     8
#define TCP_STATE_LISTEN       9
#define TCP_STATE_SYN_RCVD     10
#define TCP_STATE_INVALID      0xFF

/* ---- Errors (negative) ------------------------------------------------- */
#define TCP_ERR_BUFFER_TOO_SMALL  (-1)
#define TCP_ERR_NULL_POINTER      (-2)
#define TCP_ERR_INVALID_STATE     (-3)
#define TCP_ERR_MALFORMED_PACKET  (-4)
#define TCP_ERR_NOT_FOR_US        (-5)
#define TCP_ERR_WOULD_BLOCK       (-6)
#define TCP_ERR_CONNECTION_RESET  (-7)
#define TCP_ERR_CONNECTION_CLOSED (-8)
#define TCP_ERR_OVERFLOW          (-9)

/* ---- Event flags returned by tcp_poll --------------------------------- */
#define TCP_EV_READABLE     (1u << 0)
#define TCP_EV_WRITABLE     (1u << 1)
#define TCP_EV_ESTABLISHED  (1u << 2)
#define TCP_EV_PEER_CLOSED  (1u << 3)
#define TCP_EV_CLOSED       (1u << 4)
#define TCP_EV_TX_PENDING   (1u << 5)
#define TCP_EV_ERROR        (1u << 6)
#define TCP_EV_LISTENING    (1u << 7)
#define TCP_EV_HALF_OPEN    (1u << 8)

/* ---- Opaque handle ----------------------------------------------------- */
typedef struct TcpStreamHandle TcpStreamHandle;

/* ---- ABI / sizing ------------------------------------------------------ */
uint32_t tcp_abi_version(void);
size_t   tcp_handle_size(void);
size_t   tcp_handle_align(void);

/* ---- Lifecycle --------------------------------------------------------- */
int32_t tcp_init(TcpStreamHandle* storage,
                 const uint8_t* local_ip,  uint16_t local_port,
                 const uint8_t* remote_ip, uint16_t remote_port,
                 uint32_t iss, uint32_t initial_rto_ms);
int32_t tcp_destroy(TcpStreamHandle* handle);

/* ---- Connection control ----------------------------------------------- */
int32_t tcp_connect(TcpStreamHandle* handle, uint64_t now_ms);
int32_t tcp_listen (TcpStreamHandle* handle, uint64_t now_ms);
int32_t tcp_close  (TcpStreamHandle* handle, uint64_t now_ms);
int32_t tcp_tick   (TcpStreamHandle* handle, uint64_t now_ms);

/* Install a 16-byte secret enabling stateless SYN cookies (RFC 4987).
 * `secret` must point to exactly 16 readable bytes from a CSPRNG. */
int32_t tcp_set_cookie_secret(TcpStreamHandle* handle, const uint8_t* secret);

/* ---- State / polling --------------------------------------------------- */
uint8_t  tcp_state(const TcpStreamHandle* handle);
uint32_t tcp_poll (const TcpStreamHandle* handle);

/* ---- App ⇄ TCP buffers ------------------------------------------------- */
int32_t tcp_send(TcpStreamHandle* handle,
                 const uint8_t* data, size_t len, size_t* out_written);
int32_t tcp_recv(TcpStreamHandle* handle,
                 uint8_t* buf, size_t cap, size_t* out_read);

/* ---- TCP ⇄ WireGuard datagrams ---------------------------------------- */
int32_t tcp_inject_packet (TcpStreamHandle* handle,
                           const uint8_t* packet, size_t len, uint64_t now_ms);
int32_t tcp_extract_packet(TcpStreamHandle* handle,
                           uint8_t* buf, size_t cap, size_t* out_written);

/* ---- Diagnostics (NOT a stable ABI) ----------------------------------- */
typedef struct TcpDebugSnapshot {
    uint32_t snd_una;
    uint32_t snd_nxt;
    uint32_t snd_wnd;
    uint32_t rcv_nxt;
    uint32_t cwnd;
    uint32_t ssthresh;
    uint32_t rto_ms;
    uint64_t rto_deadline;
    uint64_t now_ms;
    uint32_t send_ring_len;
    uint32_t recv_ring_len;
    uint32_t oo_start;
    uint32_t oo_len;
    uint32_t tx_len;
    uint8_t  pending_ack;
    uint8_t  dup_ack_count;
    uint8_t  state;
} TcpDebugSnapshot;

int32_t tcp_debug_snapshot(const TcpStreamHandle* handle,
                           TcpDebugSnapshot* out);

#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* TCP_SANS_IO_H */